<resources>
    <string name="last_read">Terakhir dibaca</string>
    <string name="daily_prayer">Doa</string>
    <string name="schedule_pray">Shalat</string>
    <string name="other">Lainnya</string>
    <string name="about">Info Aplikasi</string>
    <string name="contact">Kontak</string>
    <string name="quran">Al-Quran</string>
    <string name="others">Lainnya</string>
    <string name="no_internet">Koneksi bermasalah, tarik ke bawah untuk memuat ulang</string>
    <string name="bismillah">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</string>
    <string name="icon_loc">ikon lokasi</string>
    <string name="icon_mosque">ikon masjid</string>
    <string name="next_prayer">Waktu Shalat Berikutnya :</string>
    <string name="province_choose">Pilih Provinsi</string>
    <string name="city_choose">Pilih Kota di %s</string>
    <string name="location_not_found">Lokasi tidak ditemukan, cari lokasi lain</string>
    <string name="last_read_surah_empty">"Belum ada surah yang ditandai"</string>
    <string name="shubuh">Shubuh</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
    <string name="small">Kecil</string>
    <string name="medium">Sedang</string>
    <string name="big">Besar</string>
    <string name="super_big">Sangat Besar</string>
    <string name="find_qibla">Temukan Arah Kiblat</string>
    <string name="found_qibla">Arah Kiblat Ditemukan</string>
    <string name="north">U</string>
    <string name="south">S</string>
    <string name="east">T</string>
    <string name="west">B</string>
    <string name="setting_font">Atur Ukuran Ayat</string>
    <string name="save">Simpan</string>
    <string name="daily_doa">Doa Harian</string>
    <string name="alarm">alarm</string>
    <string name="bookmark">Baca Nanti</string>
    <string name="bookmark_empty">Belum ada surah yang disimpan</string>
    <string name="tv_city_and_total_ayah">%1$s • %2$d ayat</string>
    <string name="delete_all">Hapus Semua</string>
    <string name="are_you_sure">Apakah Anda yakin ingin menghapus?</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="are_you_sure_desc">Jika memilih hapus, maka data surah yang sudah Anda simpan sebelumnya akan terhapus.</string>
    <string name="your_location">Lokasi Anda</string>
    <string name="not_found_location">-</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="search_surah">Cari Surah</string>
    <string name="search_ayah">Cari Ayat</string>
    <string name="fileName">%s/MuslimQ/%s.mp3</string>
    <string name="ask_audio_title">Surah %s</string>
    <string name="ask_gps_title">Cari Lokasi</string>
    <string name="ask_audio_desc">Audio surah %s belum diunduh, audio ini membutuhkan koneksi internet untuk mengunduhnya. Apakah anda ingin mengunduhnya sekarang?</string>
    <string name="ask_gps_desc">Untuk melihat/memperbarui waktu shalat, aplikasi ini membutuhkan akses lokasi. Anda dapat melakukannya melalui GPS atau memilih lokasi secara manual.</string>
    <string name="download">Unduh</string>
    <string name="gps">GPS</string>
    <string name="play_online">Putar Online</string>
    <string name="choose_manually">Pilih Manual</string>
    <string name="download_surah_notif">MuslimQ - Surah %s</string>
    <string name="download_surah">Mengunduh Audio Surah %s</string>
    <string name="wait_download">"Mohon tunggu selama proses unduh berlangsung…"</string>
    <string name="about_surah">Tentang Surah</string>
    <string name="delete_audio">Hapus Audio</string>
    <string name="tag">Tandai</string>
    <string name="app_id">ca-app-pub-5351128060428013~4196500302</string>
    <string name="banner_id">ca-app-pub-5351128060428013/8076907702</string>
    <string name="interstitial_id">ca-app-pub-5351128060428013/9948941311</string>
    <string name="not_found">Pencarian tidak ditemukan</string>
    <string name="close">Tutup</string>
    <string name="tagging">Tandai &amp; Kembali</string>
    <string name="ask_tagging_desc">Apakah Anda ingin menandai ayat ini sebagai ayat yang terakhir dibaca?</string>
    <string name="ask_tagging_title">Tandai Ayat?</string>
    <string name="show">Tampilkan</string>
    <string name="input_number">Masukkan Nomor Ayat</string>
    <string name="app_version">Versi %s</string>
    <string name="continue_reading">Lanjutkan Membaca</string>
    <string name="copyright">بسم الله الرحمن الرحيم</string>
    <string name="license">Lisensi</string>
    <string name="mit_license">MIT License\n\nCopyright © 2023 Muslim Q\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="done">Selesai</string>
    <string name="info">Info</string>
    <string name="see_qibla">Lihat Kiblat ></string>
    <string name="tasbih">Tasbih</string>
    <string name="list_dzikir">Dzikir</string>
    <string name="list_dzikir_type">Pilih Jenis Dzikir</string>
    <string name="plus">+</string>
    <string name="input_dzikir">Masukkan Dzikir</string>
    <string name="input_max_dzikir">Masukkan Batas Maksimal Dzikir</string>
    <string name="reset">Reset</string>
    <string name="max_count_dzikir">Batas Maksimal Dzikir</string>
    <string name="minus">-</string>
    <string name="sound_notif"><![CDATA[Adzan & Notifikasi]]></string>
    <string name="only_notif">Hanya Notifikasi</string>
    <string name="setting_notif">Pengaturan Notifikasi</string>
    <string name="custom_dzikir_empty">Tidak ada dzikir kustom yang disimpan</string>
    <string-array name="tipe_dzikir">
        <item>Umum</item>
        <item>Dzikir Pagi</item>
        <item>Dzikir Sore</item>
        <item>Dzikir Setelah Shalat</item>
        <item>Kustomisasi</item>
    </string-array>
    <string name="target_count">/ %1$s</string>
    <string name="muadzin">Pilih Muadzin</string>
    <string name="adzan_regular">Adzan Reguler</string>
    <string name="adzan_shubuh">Adzan Shubuh</string>
    <string name="focus_mode"><![CDATA[Mode Fokus>>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asmaul_husna">Asmaul Husna</string>
    <string name="tasbih_menu">Tasbih</string>
    <string name="setting">Setting</string>
    <string name="qiblat">Qiblat</string>
</resources>